# Rust-EOIP

./: Cargo.toml  README.md  config.toml
.github/workflows/: release.yml
src/: main.rs
