[package]
name = "eoip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hexhex = "1.1.1"
interfaces = "0.0.9"
parking_lot = "0.12.1"
serde = { version = "1.0.193", features = ["derive"] }
socket2 = { version = "0.5.5", features = ["all"] }
toml = "0.8.8"
tun-tap = "0.1.4"
